[tool.poetry]
name = "advent2022"
version = "0.1.0"
description = "Solutions to adventofcode 2022"
authors = ["Jon Hoffman <jonhoffman@gmail.com.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^6.0.0"
pytest = "^7.2.0"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
